--- a/Objetivos Prioritarios/Views/Asuntos/ObjetivoRelacionadoAsuntoListPartial.cshtml
+++ b/Objetivos Prioritarios/Views/Asuntos/ObjetivoRelacionadoAsuntoListPartial.cshtml
@@ -78,7 +78,7 @@
             }
         },
         {
-            title: "Aliases",
+            title: "Aliases1",
             data: "Aliases",
             orderable: true,
             render: function (data, type, full) {
