--- a/Objetivos Prioritarios/Views/FichaObjetivo/FichaObjetivosListPartial.cshtml
+++ b/Objetivos Prioritarios/Views/FichaObjetivo/FichaObjetivosListPartial.cshtml
@@ -79,23 +79,23 @@
             IsFiltered: false
         },
         {
-            title: "Alias",
-            data: "Aliases",
+            title: "Carpeta(s) de Investigación",
+            data: "Carpetas",
             orderable: true,
             IsFiltered: false
         },
         {
-            title: "GruposDelictivos",
-            data: "GruposDelictivos",
+            title: "Delitos",
+            data: "Delitos",
             orderable: true,
             IsFiltered: false
         },
-        {
-            title: "Fecha Nacimiento",
-            data: "FechaNacimiento", render: $.fn.dataTable.render.moment(undefined, 'DD-MM-YYYY', 'en'),
-            orderable: true,
-            IsFiltered: false
-        },
+        //{
+        //    title: "Fecha Nacimiento",
+        //    data: "FechaNacimiento", render: $.fn.dataTable.render.moment(undefined, 'DD-MM-YYYY', 'en'),
+        //    orderable: true,
+        //    IsFiltered: false
+        //},
 
        
 
